[metadata]
name = youtube-photo
version = attr: youtube_photo.__init__.__version__
description = Generating a H.264 video from the specified pictures and upload to YouTube.
long_description = file: README.md
long_description_content_type = text/markdown
# license =
author = inaniwaudon
author_email = w.yuto0916@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3
install_requires =
    google-api-python-client
    youtube-dl
    oauth2client
    Pillow
    opencv-python

[options.entry_points]
console_scripts =
    ytp = youtube_photo.main:main


[yapf]
based_on_style = yapf
